# me744_project

./: .gitignore  .gitmodules  README.md  fuji_sam2.py  fuji_train.py  genesis_test.py  main.py  pyproject.toml  setup.py  setup_uv.sh  virdo_test.py
archive/: DATASET_EXPLANATION.md  MLOPS_MODERNIZATION.md  PARAMETER_GROUPING_EXPLAINED.md  convert_envy_to_coco_whole.py  fuji_test.py  fuji_using_sam2.py  fuji_visualize_ground_truth_masks.py  inspect_masks.py  main.py  pointvessel_test.py  setup.py  setup.sh
maskrcnn/: augment_fuji.py  color_picker.py  convert_coco_to_unet.py  convert_envy_to_coco.py  convert_fuji_to_coco.py  experiment_car.yaml  experiment_envy.yaml  experiment_fuji.yaml  experiment_fuji_augmented_without_retrain.yaml  mlops.py  predict_fusion.py  predict_maskrcnn.py  predict_unet.py  predict_yolo.py  visualize_fusion.py  visualize_yolo.py  visualize_yolo_quick.py
maskrcnn/test_img/: 3448_rgb_0001_withapples.npy
maskrcnn/test_img_yolo/: yolo_metrics.json
maskrcnn_coco/: README_VISUALIZATION.md  augment_fuji.py  bbox_explanation.py  box_processing_demo.py  changeunetname.py  check_coco_format.py  color_picker.py  convert_coco_to_yolo.py  convert_envy_to_coco.py  convert_envy_to_coco_whole.py  convert_envy_to_unet.py  convert_fuji_to_coco.py  convert_fuji_to_unet.py  convert_fuji_to_yolo.py  core.py  epoch_processing_explanation.py  experiment_envy.yaml  experiment_fuji.yaml  experiment_fuji_augmented.yaml  experiment_fuji_augmented_without_retrain.yaml  filename  from4lg_to2lb.py  fuji_dataset.yaml  kangaroo.py  main.py  main_mlops.py  merge_and_eval.py  mix_datasets.py  mlops.py  mlops_modernization.py  notebook.py  output.txt  predict_maskrcnn.py  predict_unet.py  predict_yolo.py  pyproject.toml  test.ipynb  train_maskrcnn.py  train_yolo.py  unet_changenumlabels.py  (+9 more)
maskrcnn_coco/Fuji-Apple-Segmentation/testset/: annotations.json
maskrcnn_coco/Fuji-Apple-Segmentation_yolo/: dataset.yaml
maskrcnn_coco/Fuji-Apple-Segmentation_yolo/labels/: train.cache  val.cache
maskrcnn_coco/Fuji-Apple-Segmentation_yolo/labels/train/: _MG_3004_02.txt  _MG_3004_03.txt  _MG_3004_04.txt  _MG_3004_05.txt  _MG_3004_08.txt  _MG_3004_09.txt  _MG_3004_10.txt  _MG_3004_13.txt  _MG_3004_14.txt  _MG_3004_15.txt  _MG_3004_17.txt  _MG_3004_20.txt  _MG_3004_22.txt  _MG_3017_01.txt  _MG_3017_03.txt  _MG_3017_04.txt  _MG_3017_08.txt  _MG_3017_09.txt  _MG_3017_10.txt  _MG_3017_13.txt  _MG_3017_14.txt  _MG_3017_15.txt  _MG_3017_16.txt  _MG_3017_19.txt  _MG_3017_20.txt  _MG_3017_21.txt  _MG_3168_02.txt  _MG_3168_04.txt  _MG_3168_05.txt  _MG_3168_06.txt  _MG_3168_09.txt  _MG_3168_10.txt  _MG_3168_11.txt  _MG_3168_12.txt  _MG_3168_14.txt  _MG_3168_15.txt  _MG_3168_16.txt  _MG_3168_17.txt  _MG_3168_19.txt  _MG_3168_20.txt  (+148 more)
maskrcnn_coco/Fuji-Apple-Segmentation_yolo/labels/val/: _MG_3004_06.txt  _MG_3004_11.txt  _MG_3004_16.txt  _MG_3004_21.txt  _MG_3017_02.txt  _MG_3017_07.txt  _MG_3017_22.txt  _MG_3168_03.txt  _MG_3168_08.txt  _MG_3168_13.txt  _MG_3168_18.txt  _MG_3168_23.txt  _MG_7954_04.txt  _MG_7954_09.txt  _MG_7954_14.txt  _MG_7954_19.txt  _MG_7954_24.txt  _MG_8065_05.txt  _MG_8065_10.txt  _MG_8065_15.txt  _MG_8065_20.txt  _MG_8071_16.txt  _MG_8071_21.txt  _MG_8080_05.txt  _MG_8080_10.txt  _MG_8080_15.txt  _MG_8080_20.txt  _MG_8903_01.txt  _MG_8903_06.txt  _MG_8903_11.txt  _MG_8903_16.txt  _MG_8915_17.txt  _MG_8915_22.txt  _MG_8971_03.txt  _MG_8971_08.txt  _MG_8971_13.txt  _MG_8971_18.txt  _MG_8971_23.txt  _MG_8993_04.txt  _MG_8993_09.txt  (+5 more)
maskrcnn_coco/archive/: DEBUG_NANS.md  EPOCH_CODE_FLOW.md  GRANULAR_LOSS_LOGGING_SUMMARY.md  INSPECT_MASKS_README.md  LOSS_BREAKDOWN.md  MASK_ISSUE_FIX.md  box_processing_demo.py  car_parts_structure_explanation.md  coco_format_example.json  dataset_explanation.py  notebook.py  show_parameter_names.py
maskrcnn_coco/checkpoints/: training_summary.json
maskrcnn_coco/checkpoints_cars/: training_summary.json
maskrcnn_coco/runs/maskrcnn/maskrcnn_Fuji-Apple-Segmentation_20251106_132710/: events.out.tfevents.1762453630.Printer01.2319746.0
maskrcnn_coco/test_img/: 4997_rgb_0001.npy
maskrcnn_coco/torchvision_references/: coco_utils.py
unet/Pytorch-UNet/: drawvalcurve.py  predict.py  requirements.txt  (+1 more)
(+189 files in other folders)
