[project]
name = "ripl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "numpy>=2.3.3",
    "open3d>=0.19.0",
    "opencv-python>=4.11.0.86",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "ultralytics>=8.3.225",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.uv.workspace]
members = [
    "maskrcnn_coco",
]

[dependency-groups]
dev = ["ipykernel>=6.30.1"]
